--- a/login.html
+++ b/login.html
@@ -8,6 +8,7 @@
     <body>
         <section>
             <h1>Iniciar Sesión</h1>
+            <p></p>
             <form method="post">
                 <fieldset>
                     <label for="email">Correo Electrónico</label>
@@ -24,6 +25,10 @@
                     <button type="submit">Iniciar Sesión</button>
                 </fieldset>
             </form>
+
+            <div class="signup-link">
+                ¿No tienes una cuenta? <a href="#">Regístrate aquí</a>
+            </div>
         </section>
     </body>
 </html>
