--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <title>Ofertas</title>
 </head>
 <body>
+    <header>
+        <div class="logo">
+            <img src="img/Logo chamba 503.jpg" alt="logo">
+        </div>
+    </header>
+    <div class="oferta">
+        <h1>OFERTAS</h1>
+        <h3>Este es tu momento</h3>
+        <p>Encuentra el mejor empleo para tí</p>
+    </div>
+    <div class="puente">
+        <h3>Somos el puente para tu próximo empleo</h3>
+        <p>Te ayudamos a encontrar tu nuevo trabajo mostrándo ofertas nuevas cada día.</p>
+    </div>
+
     
 </body>
 </html>
