--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <section>
-            <h1>Iniciar Sesión</h1>
+            <h1>Iniciar Sesiónn</h1>
             <p></p>
             <form method="post">
                 <fieldset>
